deps/v8/test/message/fail/class-fields-private-throw-write.out
*%(basename)s:9: TypeError: Write of private field #x to an object which did not contain the field
  setX(o, val) { o.#x = val; }
                      ^
TypeError: Write of private field #x to an object which did not contain the field
    at X.setX (*%(basename)s:9:23)
    at *%(basename)s:12:9